operator/pkg/gateway-api/testdata/gamma/mesh-query-param-matching/input/httproute-mesh-query-param-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mesh-query-param-matching
  namespace: gateway-conformance-mesh
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - matches:
    - queryParams:
      - name: animal
        value: whale
    backendRefs:
    - name: echo-v1
      port: 8080
  - matches:
    - queryParams:
      - name: animal
        value: dolphin
    backendRefs:
    - name: echo-v2
      port: 8080

  # Combinations with core match types.
  - matches:
    - path:
        type: PathPrefix
        value: /path1
      queryParams:
      - name: animal
        value: whale
    backendRefs:
    - name: echo-v1
      port: 8080
  - matches:
    - headers:
      - name: version
        value: one
      queryParams:
      - name: animal
        value: whale
    backendRefs:
    - name: echo-v2
      port: 8080

  # Match of the form (cond1 AND cond2) OR (cond3 AND cond4 AND cond5)
  - matches:
    - path:
        type: PathPrefix
        value: /path3
      queryParams:
      - name: animal
        value: shark
    - path:
        type: PathPrefix
        value: /path4
      headers:
      - name: version
        value: three
      queryParams:
      - name: animal
        value: kraken
    backendRefs:
    - name: echo-v1
      port: 8080

  # Matches for checking precedence.
  - matches:
    - path:
        type: PathPrefix
        value: /path5
    backendRefs:
    - name: echo-v1
      port: 8080
  - matches:
    - queryParams:
      - name: animal
        value: hydra
    backendRefs:
    - name: echo-v2
      port: 8080
